--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -45,4 +45,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: pdf
-          path: mini_book/_build/latex/book.pdf
+          path: blog/_build/latex/book.pdf
