--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -6,7 +6,7 @@ logo: logo.svg
 
 # Short description about the book
 description: >-
-  A brief introduction to Python programming for scientific applications.
+  Blog on various math/programming topics.
 
 #######################################################################################
 # Execution settings
