--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: qe-mini-example
+name: dekau-dev
 channels:
   - default
 dependencies:
@@ -8,5 +8,4 @@ dependencies:
   - pandas
   - matplotlib
   - pip:
-    - quantecon
     - jupyter-book
