--- a/.github/workflows/build-html-and-deploy.yml
+++ b/.github/workflows/build-html-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
           miniconda-version: 'latest'
           python-version: 3.8
           environment-file: environment.yml
-          activate-environment: qe-mini-example
+          activate-environment: dekau-dev
 
       - name: Install jupyter_book
         shell: bash -l {0}
