--- a/.github/workflows/build-html-and-deploy.yml
+++ b/.github/workflows/build-html-and-deploy.yml
@@ -32,6 +32,10 @@ jobs:
         shell: bash -l {0}
         run: jb build blog/
 
+      - name: nojekyll
+        shell: bash -l {0}
+        run: touch blog/_build/html/.nojekyll
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
