--- a/blog/_toc.yml
+++ b/blog/_toc.yml
@@ -1,9 +1,9 @@
-# - file: README
-- file: posts/index
-
-- part: 2020
-  sections:
-      - file: posts/2020/llamas.md
-- part: 2021
-  sections:
-      - file: posts/2021/intuitionistic-logic.md
+format: jb-book
+root: posts/index
+parts:
+- caption: '2020'
+  chapters:
+  - file: posts/2020/llamas.md
+- caption: '2021'
+  chapters:
+  - file: posts/2021/intuitionistic-logic.md
